[gd_scene load_steps=9 format=3 uid="uid://ds4g8d318di3c"]

[ext_resource type="Script" path="res://src/scenes/paddles/paddle.gd" id="1_v1fd8"]
[ext_resource type="Texture2D" uid="uid://2r1toqougou0" path="res://src/assets/paddles/basic_paddle_middle.png" id="2_ha5rj"]
[ext_resource type="Texture2D" uid="uid://cfdgmg6datusp" path="res://src/assets/paddles/basic_paddle_end.png" id="3_xmqhx"]
[ext_resource type="Texture2D" uid="uid://ti2va3f2b4th" path="res://src/assets/paddles/basic_paddle_marker.png" id="4_erfpn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08wh5"]
radius = 8.0
height = 256.0

[sub_resource type="SpriteFrames" id="SpriteFrames_tnak4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ha5rj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_tkyf5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xmqhx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ualev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_erfpn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BasicPaddle" type="AnimatableBody2D"]
script = ExtResource("1_v1fd8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_08wh5")

[node name="Middle" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_tnak4")

[node name="EndLeft" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_tkyf5")
offset = Vector2(1, 0)

[node name="EndRight" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_tkyf5")
offset = Vector2(-1, 0)
flip_h = true

[node name="MarkerLeft" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_ualev")

[node name="MarkerRight" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_ualev")
flip_h = true
